# 82ARC

./: .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  LICENSE  Makefile  README.md  arcagi2_benchmark.py  benchmark.py  docker-compose.yml  gsm8k_benchmark.py  humaneval_benchmark.py  pyproject.toml
aegis/: .gitignore  AegisApp.jsx  GITHUB_SETUP.md  README.md  package.json
aegis-app/: .env.example  README.md  middleware.ts  package.json  tailwind.config.js
aegis-mcp/: ARCHITECTURE.md  ASSETS.md  CAPABILITIES.md  Dockerfile  EXECUTE_PROMPT.md  PLATFORM_STRATEGY.md  README.md  REBRANDING_SUMMARY.md  RUNBOOK.md  SECURITY_AUDIT_REPORT.md  TASK.md  TEST_RESULTS.md  pyproject.toml
aegis-mcp/.github/workflows/: ci.yaml
aegis-mcp/aegis/: __init__.py
aegis-mcp/aegis-mcp/: AUTHENTICATION_GUIDE.md  requirements.txt  server.py
aegis-mcp/aegis-mcp/core/: __init__.py  config.py  storage.py
aegis-mcp/aegis/api/: __init__.py  app.py  middleware.py  routes.py  schemas.py
aegis-mcp/aegis/cli/: __init__.py  main.py
aegis-mcp/aegis/core/: __init__.py  audit.py  auth.py  engine.py  exceptions.py  models.py  pack_loader.py  redaction.py  repository.py  storage.py
aegis-mcp/aegis/executors/: __init__.py  agent_executor.py  base.py  prompt_executor.py
aegis-mcp/aegis/mcp/: __init__.py  server.py
aegis-mcp/docs/adr/: ADR-001-core-architecture.md  ADR-002-safety-model.md  ADR-003-pack-format.md  ADR-004-storage-model.md
aegis-mcp/modules/: DEPRECATED.md  REGISTRY.json  antiforensics_framework.py  beacon_controller.py  credentials_harvester.py  dns_exfil.py  https_exfil.py  implant_generator.py  lateral_movement.py  log_wiper.py  network_mapper.py  persistence_framework.py  privesc_framework.py
aegis-mcp/modules/ai_attack/: __init__.py  adaptive_attacks.py  agent_attacks.py  fingerprint.py  injection.py  jailbreak.py
aegis-mcp/modules/campaigns/: __init__.py  kill_chain.py
aegis-mcp/modules/infra/: __init__.py  c2_framework.py  dns.py  manager.py
aegis-mcp/modules/payload/: __init__.py  adaptive.py  polymorphic.py  selector.py
aegis-mcp/modules/post_exploit/: __init__.py  advanced_post.py
aegis-mcp/modules/recon/: __init__.py  advanced_recon.py  content_analyzer.py  dns_enum.py  http_probe.py
aegis-mcp/modules/vuln/: __init__.py  jwt.py  lfi.py  scanner.py  sqli.py  ssrf.py  ssti.py  xss.py  xxe.py
aegis-mcp/packs/agent-security/: pack.yaml
aegis-mcp/packs/agent-security/tests/: confused-deputy.yaml  mcp-security.yaml  permission-escalation.yaml  tool-boundary.yaml
aegis-mcp/packs/guardrail-eval/: pack.yaml
aegis-mcp/packs/guardrail-eval/tests/: content-filter.yaml  edge-cases.yaml  output-safety.yaml  refusal-consistency.yaml
aegis-mcp/packs/prompt-injection/: pack.yaml
aegis-mcp/packs/prompt-injection/tests/: direct-injection.yaml  indirect-injection.yaml  instruction-override.yaml  jailbreak.yaml
aegis-mcp/protocols/: aegis-operations.json
aegis-mcp/tasks/: DOCUMENTATION_TASK.md
arc_solver/: __init__.py  cli.py  config.py  main.py
cloud/: CLOUD_DEPLOYMENT.md  Dockerfile.cloud  modal_app.py  runpod_handler.py  setup_modal.sh
configs/: default.yaml
docs/: ARCHITECTURE.md
nightowl/: ARCHITECTURE.md  ASSETS.md  CAPABILITIES.md  EXECUTE_PROMPT.md  README.md  RUNBOOK.md  TASK.md  TEST_RESULTS.md
tests/: test_all.py
(+79 files in other folders)
